# fiware_admin

./: .gitignore  Cargo.toml  LICENSE  README.md  client.py  fiware_admin.py  random_helper.py  sensor1-metadata.json
examples/: air_quality.json  config_fiware.json.template  poi_data.json  sensor2-metadata.json  weather.json
src/: client.rs  main.rs  random_helper.rs
