[package]
name = "fiware_admin"
version = "0.1.0"
description = "General Fiware admin util for Dataskop/Smart Communities projects."
authors = ["Egor Evlampiev <22imc10282@fh-krems.ac.at>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "string"] }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.10.1", features = ["json", "charset"] }
